--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ body {
 
 .navLinkButton {
   padding: 1px;
-  border: 2px solid purple;
 }
 
 .title {
@@ -23,7 +22,6 @@ body {
   background-image: url(https://images.photowall.com/products/57653/marble-with-yellow-veins.jpg?h=699&q=85);
   background-size: cover;
   background-attachment: fixed;
-  border: 2px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -60,4 +58,13 @@ body {
   background: inherit;
   margin: -20px;
   z-index: -1;
+}
+
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  text-align: center;
+  background-color: bisque;
 }
