--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navLinks {
-  background-color: bisque;
+  background-color: #E9DAC4;
   text-align: right;
   display: flex;
   flex-direction: row;
@@ -12,15 +12,34 @@ body {
   height: 3rem;
 }
 
-.navLinkButton {
+.titlename {
   text-transform: none;
   text-decoration: none;
+  color: black;
   font-family: 'Playfair Display', serif;
   display: flex; 
   flex-direction: row; 
   justify-content: space-evenly;
-  align-items: center;
-  padding: 5px;
+  align-items: baseline;
+  margin: 5px;
+  font-size: 20px;
+}
+
+.navLinkButton {
+  text-transform: none;
+  text-decoration: none;
+  color: black;
+  font-family: 'Playfair Display', serif;
+  display: flex; 
+  flex-direction: row; 
+  justify-content: space-evenly;
+  align-items: baseline;
+  margin: 5px;
+  font-size: 18px;
+}
+
+.navLinkButton:hover {
+  color: #a48bd6;
 }
 
 .title {
@@ -32,7 +51,9 @@ body {
 .headshot {
   width: 90vw;
   height: auto;
-  padding: 2rem;
+  margin: 2rem;
+  border-radius: 10em;
+  box-shadow: 5px 5px grey;
 }
 
 .titleTexta {
@@ -62,7 +83,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: auto;
+  min-height: 100vh;
 }
 
 .homeContainer {
@@ -114,5 +135,5 @@ body {
   text-align: center;
   justify-content: center;
   padding: 1rem;
-  background-color: bisque;
+  background-color: #E9DAC4;
 }
